# otoge_rl

./: .gitignore  Makefile  README.md  otoge_rl.ipynb  pyproject.toml
.github/workflows/: quality.yml
src/: evaluate.py  main.py  play_random.py
src/agent/: __init__.py  callbacks.py  ppo_config.json  utils.py
src/rhythm_game/: __init__.py  config.json  env.py
